# netbox-cisco-aci

./: .gitignore  .yamllint.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  COMPATIBILITY.md  LICENSE  MANIFEST.in  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
develop/: configuration.py
docs/: changelog.md  cloud-compatibility.md  compatibility.md  configuration.md  development.md  index.md
netbox_aci/: __init__.py  choices.py  constants.py  navigation.py  search.py  urls.py
netbox_aci/api/: urls.py
netbox_aci/api/serializers/: __init__.py  fabric.py  tenant.py
netbox_aci/api/views/: __init__.py  tenant.py
netbox_aci/filtersets/: __init__.py  fabric.py  tenant.py
netbox_aci/forms/: __init__.py  fabric.py  tenant.py
netbox_aci/graphql/: __init__.py  schema.py
netbox_aci/migrations/: 0001_initial.py  0002_tenancy.py
netbox_aci/models/: __init__.py
netbox_aci/models/fabric/: __init__.py  fabrics.py  nodes.py  pods.py
netbox_aci/models/tenant/: app_profiles.py  bridge_domains.py  endpoint_groups.py  endpoint_security_groups.py  tenants.py  vrfs.py
netbox_aci/tables/: __init__.py  fabric.py  tenant.py
netbox_aci/templates/netbox_aci/: aciappprofile.html  aciendpointsecuritygroup.html  acinode.html  acipod.html  acitenant.html  aciusegattribute.html  acivrf.html
netbox_aci/tests/: base.py
netbox_aci/tests/api/: test_fabric.py  test_tenant.py
netbox_aci/tests/filtersets/: test_fabric.py  test_tenant.py
netbox_aci/tests/forms/: test_fabric.py  test_tenant.py
netbox_aci/tests/models/: test_fabric.py  test_tenant.py
netbox_aci/views/: __init__.py  fabric.py  tenant.py
netbox_cisco_aci/: __init__.py  choices.py  constants.py  navigation.py  search.py  urls.py  validators.py  version.py
netbox_cisco_aci/api/: __init__.py  urls.py
netbox_cisco_aci/api/serializers/: __init__.py  access.py  access_groups.py  access_policies.py  access_profiles.py  bindings.py  contracts.py  fabric.py  l3out.py  tenant.py
netbox_cisco_aci/api/views/: __init__.py  access.py  access_groups.py  access_policies.py  access_profiles.py  bindings.py  contracts.py  fabric.py  l3out.py
netbox_cisco_aci/filtersets/: __init__.py  access.py  access_groups.py  access_policies.py  access_profiles.py  bindings.py  contracts.py  l3out.py  tenant.py
netbox_cisco_aci/forms/: __init__.py  access.py  access_groups.py  access_policies.py  access_profiles.py  bindings.py  contracts.py  l3out.py  tenant.py
netbox_cisco_aci/graphql/: schema.py
netbox_cisco_aci/migrations/: 0001_initial.py  0002_tenancy.py  0003_access_policies.py  0004_phase3_field_fixes.py  0005_switch_interface_profiles.py  0006_contracts.py  0007_static_port_bindings.py  0008_l3outs.py  0009_static_routes.py
netbox_cisco_aci/models/: __init__.py  base.py
netbox_cisco_aci/models/access/: __init__.py  aaeps.py  domains.py  policy_groups.py  vlan_pools.py
netbox_cisco_aci/models/access/policies/: __init__.py  (+6 more)
netbox_cisco_aci/models/bindings/: __init__.py  domain_bindings.py  fabric_membership.py  static_port_bindings.py  vpc.py
netbox_cisco_aci/models/contracts/: __init__.py  contracts.py  filters.py  relations.py  subjects.py
netbox_cisco_aci/models/fabric/: fabrics.py  nodes.py  pods.py
netbox_cisco_aci/models/l3out/: __init__.py  bgp_peer.py  eigrp.py  external_epg.py  l3out.py  l3out_interface.py  logical_interface_profile.py  logical_node.py  logical_node_profile.py  ospf.py  static_route.py
netbox_cisco_aci/models/tenant/: __init__.py  app_profiles.py  bridge_domains.py  endpoint_groups.py  endpoint_security_groups.py  tenants.py  vrfs.py
netbox_cisco_aci/tables/: __init__.py  access.py  access_groups.py  access_policies.py  access_profiles.py  bindings.py  contracts.py  fabric.py  l3out.py  tenant.py
netbox_cisco_aci/template_content/: __init__.py  device.py  interface.py
netbox_cisco_aci/templates/netbox_cisco_aci/: aciaaep.html  aciaaepepgmapping.html  acibgppeer.html  acibridgedomain.html  acibridgedomainsubnet.html  acicdpinterfacepolicy.html  acicontract.html  acicontractrelation.html  acidomain.html  acidomainbinding.html  acieigrpinterfacepolicy.html  aciendpointgroup.html  aciexternalepg.html  aciexternalepgsubnet.html  acifabric.html  acifilter.html  acifilterentry.html  aciinterfacefabricmembership.html  aciinterfacepolicygroup.html  aciinterfaceprofile.html  aciinterfaceprofileselector.html  acil3out.html  acil3outinterface.html  acil3outstaticroute.html  acil3outstaticroutenexthop.html  acilacpinterfacepolicy.html  acilinklevelpolicy.html  acilldpinterfacepolicy.html  acilogicalinterfaceprofile.html  acilogicalnode.html  acilogicalnodeprofile.html  acimcpinterfacepolicy.html  aciospfinterfaceattachment.html  aciospfinterfacepolicy.html  acistaticportbinding.html  acistpinterfacepolicy.html  acisubject.html  acisubjectfilter.html  aciswitchprofile.html  aciswitchprofileinterfaceprofileattachment.html  (+4 more)
netbox_cisco_aci/tests/: base.py  test_form_dropdown_filters.py  test_tables.py  test_urls.py  test_validators.py
netbox_cisco_aci/tests/api/: test_access.py  test_access_phase4.py  test_bindings.py  test_contracts.py  test_fabric.py  test_l3out.py  test_tenant.py
netbox_cisco_aci/tests/filtersets/: test_access.py  test_access_phase4.py  test_bindings.py  test_contracts.py  test_fabric.py  test_l3out.py  test_search_access.py  test_search_access_policies.py  test_search_access_profiles.py  test_search_fabric.py  test_search_tenant.py  test_tenant.py
netbox_cisco_aci/tests/forms/: test_access.py  test_access_phase4.py  test_bindings.py  test_contracts.py  test_fabric.py  test_l3out.py  test_tenant.py
netbox_cisco_aci/tests/models/: test_access.py  test_access_phase4.py  test_bindings.py  test_contracts.py  test_fabric.py  test_l3out.py  test_tenant.py
netbox_cisco_aci/tests/template_content/: test_extensions.py
netbox_cisco_aci/views/: __init__.py  access.py  access_groups.py  access_policies.py  access_profiles.py  bindings.py  contracts.py  fabric.py  l3out.py  tenant.py
scripts/: check_cloud_compat.py
(+6 files in other folders)
