[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netbox-aci"
dynamic = ["version"]
description = "NetBox plugin for daily-operations visibility of Cisco ACI fabrics."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "Blake Parker", email = "blake.parker@e280.com" },
]
maintainers = [
    { name = "Blake Parker", email = "blake.parker@e280.com" },
]
keywords = ["netbox", "netbox-plugin", "cisco", "aci", "apic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking",
]

# Runtime dependencies are intentionally light: NetBox itself ships
# Django, DRF, django-filter, django-tables2, strawberry-graphql,
# django-storages, and everything else we lean on. Pinning them here
# would only fight NetBox's own pins.
dependencies = []

[project.optional-dependencies]
test = [
    "coverage[toml]>=7.4",
    "pytest>=8.0",
    "pytest-django>=4.8",
    "pytest-cov>=4.1",
    "ruff>=0.5",
    "yamllint>=1.35",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocs-include-markdown-plugin>=6.2",
]

[project.urls]
Homepage      = "https://github.com/bparker-e280/netbox-aci"
Documentation = "https://github.com/bparker-e280/netbox-aci#readme"
Source        = "https://github.com/bparker-e280/netbox-aci"
Issues        = "https://github.com/bparker-e280/netbox-aci/issues"
Changelog     = "https://github.com/bparker-e280/netbox-aci/blob/main/CHANGELOG.md"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = { attr = "netbox_aci.version.__version__" }

[tool.setuptools.packages.find]
include = ["netbox_aci*"]

[tool.setuptools.package-data]
netbox_aci = [
    "templates/**/*.html",
    "static/**/*",
    "locale/**/*.mo",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["migrations"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle / pyflakes
    "I",             # isort
    "B",             # flake8-bugbear
    "UP",            # pyupgrade
    "DJ",            # flake8-django
]
ignore = ["E501"]   # ruff format handles line length

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "netbox.settings"
python_files = ["test_*.py"]
addopts = "--strict-markers --cov=netbox_aci --cov-report=term-missing --cov-fail-under=65"

[tool.coverage.run]
source = ["netbox_aci"]
omit = [
    "netbox_aci/migrations/*",
    "netbox_aci/tests/*",
    "netbox_aci/version.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
