[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netbox-cisco-aci"
dynamic = ["version"]
description = "NetBox plugin for daily-operations visibility of Cisco ACI fabrics."
readme = { file = "README.md", content-type = "text/markdown" }
# NetBox 4.5+ requires Python 3.12. We mirror that requirement here so
# `pip install netbox-cisco-aci` against an older Python fails fast with a
# clear message rather than blowing up later at import-time.
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "Blake Parker", email = "blake.parker@e280.com" },
]
maintainers = [
    { name = "Blake Parker", email = "blake.parker@e280.com" },
]
keywords = ["netbox", "netbox-plugin", "cisco", "aci", "apic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Networking",
]

# Runtime dependencies are intentionally light: NetBox itself ships
# Django, DRF, django-filter, django-tables2, strawberry-graphql,
# django-storages, and everything else we lean on. Pinning them here
# would only fight NetBox's own pins.
dependencies = []

[project.optional-dependencies]
test = [
    "coverage[toml]>=7.4",
    "pytest>=8.0",
    "pytest-django>=4.8",
    "pytest-cov>=4.1",
    # ruff is pinned to keep local and CI in lockstep on formatter
    # output. Bump together with `.github/workflows/ci.yml`.
    "ruff==0.15.14",
    "yamllint==1.38.0",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocs-include-markdown-plugin>=6.2",
]

[project.urls]
Homepage      = "https://github.com/droolingtaz/netbox-cisco-aci"
Documentation = "https://github.com/droolingtaz/netbox-cisco-aci#readme"
Source        = "https://github.com/droolingtaz/netbox-cisco-aci"
Issues        = "https://github.com/droolingtaz/netbox-cisco-aci/issues"
Changelog     = "https://github.com/droolingtaz/netbox-cisco-aci/blob/main/CHANGELOG.md"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = { attr = "netbox_cisco_aci.version.__version__" }

[tool.setuptools.packages.find]
include = ["netbox_cisco_aci*"]

[tool.setuptools.package-data]
netbox_cisco_aci = [
    "templates/**/*.html",
    "static/**/*",
    "locale/**/*.mo",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["migrations"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle / pyflakes
    "I",             # isort
    "B",             # flake8-bugbear
    "UP",            # pyupgrade
    "DJ",            # flake8-django
]
ignore = ["E501"]   # ruff format handles line length

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "netbox.settings"
python_files = ["test_*.py"]
# `--cov-fail-under` is intentionally omitted during 0.x scaffolding
# while the plugin surface is still growing rapidly. Once the data
# model stabilises (~v0.5) the gate will be reintroduced at 65 and
# the target lifted to 70 per the NBL plugin-catalogue guidance.
addopts = "--strict-markers --cov=netbox_cisco_aci --cov-report=term-missing"

[tool.coverage.run]
source = ["netbox_cisco_aci"]
omit = [
    "netbox_cisco_aci/migrations/*",
    "netbox_cisco_aci/tests/*",
    "netbox_cisco_aci/version.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
